# annboard-web

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/api/: main.py
backend/app/api/routers/: __init__.py  advertisement.py  auth.py  category.py  user.py
backend/app/api/routers/admin/: advertisements.py  categories.py  users.py
backend/app/core/: config.py  db.py  exceptions.py  s3.py  security.py
backend/app/crud/: __init__.py  advertisement_crud.py  category_crud.py  user_crud.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 9850a1e3b1cf_.py  9ef802f1d716_.py  a44dd4ba596a_initial.py
backend/app/models/: __init__.py  advertisement.py  base.py  category.py  image.py  user.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: About.tsx  AdDetails.tsx  AdImageUpload.tsx  AdsList.tsx  CreateAd.tsx  Home.tsx  Login.tsx  Profile.tsx
