[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["dsdsdsds <sdssdds@example.com>"]
#requires-python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.115.12,<0.116.0"
sqlmodel = ">=0.0.24,<0.0.25"
pydantic-settings = ">=2.9.1,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.15.2,<2.0.0"
pydantic = {extras = ["email"], version = ">=2.11.4,<3.0.0"}
uvicorn = ">=0.34.2,<0.35.0"
passlib = ">=1.7.4,<2.0.0"
bcrypt = ">=4.3.0,<5.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.4.0,<4.0.0"}
python-multipart = ">=0.0.20,<0.0.21"
dnspython = ">=2.7.0,<3.0.0"
pydantic-extra-types = ">=2.10.4,<3.0.0"
boto3 = ">=1.38.20,<2.0.0"
phonenumbers = ">=9.0.5,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
